--- a/src/renderer/style.less
+++ b/src/renderer/style.less
@@ -2396,6 +2396,12 @@ input[type="range"].web-slider.display--small::-webkit-slider-thumb {
   height: 100%;
   bottom: 0;
   z-index: 100000;
+  &.mini {
+    width: 20%;
+    height: 20%;
+    right: 2vw;
+    bottom: 5vh;
+  }
 }
 
 #apple-music-video-container {
@@ -2424,6 +2430,10 @@ input[type="range"].web-slider.display--small::-webkit-slider-thumb {
     bottom: 0;
     filter: opacity(0.6);
     transition: 0.2s ease-in-out filter;
+
+    &.mini {
+      right: 0px;
+    }
 
     &:hover {
       filter: opacity(1);
