--- a/src/renderer/views/components/settings-plugins-github.ejs
+++ b/src/renderer/views/components/settings-plugins-github.ejs
@@ -107,7 +107,7 @@
           redirect: 'follow'
         };
 
-        fetch(readmeUrl, requestOptions)
+        app._fetch(readmeUrl, requestOptions)
           .then(response => response.text())
           .then(result => {
             self.openRepo = repo
@@ -178,7 +178,7 @@
           redirect: 'follow'
         };
 
-        fetch("https://api.github.com/search/repositories?q=topic:cidermusicplugin fork:true&per_page=100", requestOptions)
+        app._fetch("https://api.github.com/search/repositories?q=topic:cidermusicplugin fork:true&per_page=100", requestOptions)
           .then(response => response.text())
           .then(result => {
             self.repos = JSON.parse(result).items
