--- a/src/renderer/views/components/settings-themes-github.ejs
+++ b/src/renderer/views/components/settings-themes-github.ejs
@@ -126,7 +126,7 @@
           redirect: 'follow'
         };
 
-        fetch(readmeUrl, requestOptions)
+        app._fetch(readmeUrl, requestOptions)
           .then(response => response.text())
           .then(result => {
             self.openRepo = repo
@@ -184,7 +184,7 @@
           redirect: 'follow'
         };
 
-        fetch("https://api.github.com/search/repositories?q=topic:cidermusictheme fork:true&per_page=100", requestOptions)
+        app._fetch("https://api.github.com/search/repositories?q=topic:cidermusictheme fork:true&per_page=100", requestOptions)
           .then(response => response.text())
           .then(result => {
             let items = JSON.parse(result).items
