--- a/src/renderer/views/pages/about.ejs
+++ b/src/renderer/views/pages/about.ejs
@@ -121,13 +121,6 @@
             avatar: 'https://avatars.githubusercontent.com/u/27716185?v=4'
           },
           {
-            name: 'crypticplank',
-            link: 'https://github.com/crypticplank',
-            role: app.getLz('term.developer'),
-            avatar: 'https://avatars.githubusercontent.com/u/52553007?v=4',
-            twitter: 'https://twitter.com/crypticplank'
-          },
-          {
             name: 'Maikiwi',
             link: 'https://github.com/maikirakiwi',
             role: app.getLz('term.developer'),
@@ -153,6 +146,18 @@
             link: 'https://github.com/Amaru8',
             role: app.getLz('term.developer'),
             avatar: 'https://avatars.githubusercontent.com/u/52407090?v=4'
+          },
+          {
+            name: 'Swiftzerr',
+            link: 'https://github.com/Swiftzerr',
+            role: app.getLz('term.developer'),
+            avatar: 'https://avatars.githubusercontent.com/u/67812203?v=4'
+          },
+          {
+            name: 'Ishmeet',
+            link: 'https://github.com/StupeFied',
+            role: app.getLz('term.developer'),
+            avatar: 'https://avatars.githubusercontent.com/u/89881655?v=4'
           },
           {
             name: 'Void',
